fix: change db for mysql